--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "David Cyril",
   "license": "MIT",
   "dependencies": {
-"@whiskeysockets/baileys": "github:devibraah/bwmxmdtech",
+"@whiskeysockets/baileys": "https://github.com/devibraah/bwmxmdtech",
     "awesome-phonenumber": "^2.64.0",
     "@hapi/boom": "^10.0.1",
     "axios": "^1.6.8",
